objects/vlocity_cmt__CampaignMemberActionLog__c.object
<CustomObject>
    <description>Represents an action taken against a campaign member such as an attempt to call the member.</description>
    <fields>
        <fullName>vlocity_cmt__ActionDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ActionType__c</fullName>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CallTimeDisplay__c</fullName>
        <label>Call Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignId__c</fullName>
        <label>Campaign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignMemberId__c</fullName>
        <label>Campaign Member Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CampaignName__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContactId__c</fullName>
        <label>Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastCallDate__c</fullName>
        <label>Last Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LeadId__c</fullName>
        <label>Lead Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetCallDate__c</fullName>
        <label>Target Call Date</label>
        <type>DateTime</type>
    </fields>
    <label>Campaign Member Action Log</label>
    <nameField>
        <label>Campaign Action Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Action Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>